pathmod_derive/tests/ui/enum_multi.rs
use pathmod::prelude::*;

#[derive(EnumAccess)]
enum M { Both(i32, i32) }

fn main() {}
